--- a/index.html
+++ b/index.html
@@ -245,7 +245,7 @@
                         <h4>MagLook</h4>
                         <p>HTML5, CSS3, Javascript, Heroku</p>
                       </div>
-                      <img src="img/portfolio/Maglook.png" class="img-responsive portfolio-item-box" alt="Project Title"> </a> 
+                      <img src="img/portfolio/MagLook.png" class="img-responsive portfolio-item-box" alt="Project Title"> </a> 
                     </div>
                   </div>
                 </div>
